# misc

./: .gitignore  README.md  antimeme.py  bump_versions.sh  cmake-tricks.sh  cmake_clean.py  coupon_collector.py  covid_stats.py  fish_configs.py  fix_merge_3.py  fix_sc2.sh  format_quotes.py  git_other_add.py  git_xadd.py  groups_and_users.sh  init_docs.sh  inventory.py  make_new_python_package_repo.sh  notes.md  notes.sh  pip_required_versions.py  relative.py  roc_hack.py  scale_space.py  scale_space2.py  stopwatch.py  when_is_grouping_better.py
cmake/: CMakeLists.txt  cmake_install.cmake  examples.cmake  inactive.cmake  messy.cmake  utils.cmake
data/: ErotemicFleetKeys.SC2Hotkeys  install_fleet_keys.sh
debug/: random-monitor-brightness-dims.md  tensorflow_training_example.py
docker/: Dockerfile
facts/: .gitignore  facts-2021.toml  facts-2022.toml  facts-2024.toml  facts.toml  number_facts.toml  renderer.py
git/: _setup_git_commands.py  git-branch-relationships  git-grep-diff  git-init-remotes  git-squash-streaks  git-sync  git-xadd  git_branch_relationships.py  git_sync.sh  git_xadd.py
junk/: _nx_extensions_cython_backend.c  _nx_extensions_cython_backend.html  _oldver_embedding.py  bseq_with_idxs.py
learn/: bash_base_conversions.sh  bayes_vax.py  bells_thereom.py  birthday_problem.py  bit_conversion.py  busybeaver.py  collatz.py  coprime.py  coupon_collector.py  crypto_openssl.sh  derivative_divide.py  diag_mapping.py  dict_set_justification.py  dragons.py  efficiency_of_base_encodings.py  ffield.lut.5  find_gaussian_sigma_to_effectively_truncate.py  find_horizontally_weighted_characters.py  finitism.txt  fun_math_questions.txt  gnu_lark.py  hades_damage.py  hessian.py  interesting.py  killazombie.sh  lark_cmake.py  learn_flips.py  learn_gdal_grid.py  log_derivative_trick.py  math_symbols.py  mathfacts.md  monad.py  nonconvex_scaling.py  normalized_cut.py  ntk.md  numpy_type_checking.py  polynumber.py  prisoner_vertasium.py  rational.py  scale_space2.py  (+14 more)
notes/: absurd_projects.md  buildapc.py  climate.py  covid.py  debug_bad_reboot.rst  debug_disk.sh  distances.py  (+22 more)
templates/PYPKG/: .coveragerc  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.rst  apply_template.py  appveyor.yml  build_wheels.sh  install_template.sh  publish.sh  pyproject.toml  run_doctests.sh  run_tests.py  setup.py
templates/PYPKG/.circleci/: config.yml
templates/PYPKG/.github/workflows/: setup_action_secrets.md  test_binaries.yml  tests.yml
templates/PYPKG/dev/: make_strict_req.sh  setup_secrets.sh
templates/PYPKG/requirements/: runtime.txt  tests.txt
tests/rust/pyo3_example/: Cargo.toml  README.rst
tests/rust/pyo3_example/src/: lib.rs
(+172 files in other folders)
