[build-system]
requires = ["setuptools>=41.0.1", "wheel",  "Cython", "scikit-build>=0.9.0", "cmake", "ninja"]
# build-backend = "setuptools.build_meta"  commented out to disable pep517
### build-backend = "scikit-build"


[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if trace is not None",
    "verbose = .*",
    "^ *raise",
    "^ *pass *$",
    "if _debug:",
    "if __name__ == .__main__.:",
    ".*if six.PY2:"
]

omit =[
    "*/setup.py"
]


[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-*"
build-frontend = "build"
skip = "pp* cp27-* cp34-* cp35-* cp36-* *-musllinux_*"
build-verbosity = 1
test-requires = ["-r requirements/tests.txt"]
test-command = "python {project}/run_tests.py"

[tool.cibuildwheel.linux]
before-all = "yum install epel-release lz4 lz4-devel -y"

[tool.cibuildwheel.windows]
before-all = "choco install lz4 -y"

[tool.cibuildwheel.macos]
# https://stackoverflow.com/questions/67486887/how-can-you-search-for-install-and-include-link-c-libraries-on-a-mac
before-all = "brew install lz4" 


[tool.pytest.ini_options]
addopts = -p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py
norecursedirs = .git ignore build __pycache__ dev _skbuild

filterwarnings= default
                ignore:.*No cfgstr given in Cacher constructor or call.*:Warning
                ignore:.*Define the __nice__ method for.*:Warning
                ignore:.*private pytest class or function.*:Warning
